Table width fixed and scrollbar added

--- a/resources/sass/custom/customStyle.css
+++ b/resources/sass/custom/customStyle.css
@@ -41,3 +41,25 @@ input::placeholder{
 .ck-editor{
     border: 1px solid #ced4da !important;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 9px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 20px;
+    border: 7px solid transparent;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
